--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,118 +1,178 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
+  <head>
+    <meta charset="UTF-8" />
     <title>Candidate Interview</title>
-</head>
-<body>
-    <h1>Candidate Interview</h1>
-    <label for="candidateName">Your Name:</label>
-    <input type="text" id="candidateName" placeholder="Enter your name...">
-    <br><br>
-    <label for="appliedJobRole">Applied Job Role:</label>
-    <input type="text" id="appliedJobRole" placeholder="Enter applied job role...">
-    <br><br>
-    <button id="startInterview">Start Interview</button>
+    <link rel="stylesheet" href="../static/css/index.css" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500&family=Poppins:wght@300&display=swap"
+      rel="stylesheet"
+    />
+  </head>
+  <body>
+    <div class="dashboard">
+      <div class="nav">
+        <h1 style="font-size: 40px;">Funnel<span style="color: #2bbe60;font-weight: bold;">HQ</span></h1>
+          <a href="/google_logout"><button class="btn">Logout</button></a>
+      </div>
+      <div class="d_title">
+        <h1>Candidate <span style="color: #2bbe60;">Interview</span></h1>
+      </div>
+      <div class="user_info">
+        {% if user %}
+          <h2 style="font-size: 50px;"><span style="font-weight: bold;">Hello,</span> {{ user.username }}</h2>
+          <!-- <div><span style="font-weight: bold;">Email:</span> {{ user.email }}</div>
+          <div><span style="font-weight: bold;">Phone no:</span> {{ user.phone }}</div> -->
+        {% elif google_name %}
+          <h2 style="font-size: 50px;"><span style="font-weight: bold;">Hello,</span> {{ google_name }}</h2>
+          <!-- <div><span style="font-weight: bold;">Email:</span> {{ google_email }}</div>
+          <div><span style="font-weight: bold;">Phone no:</span> Not Available</div> -->
+        {% endif %}
+        </div>
 
-    <h2>Question Showcase</h2>
-    <div id="questionContainer">
-        <p id="question"></p>
-        <textarea id="response" placeholder="Your response..."></textarea>
-        <button id="nextQuestion">Next Question</button>
-    </div>
+        <div class="role">
+            <span style="font-weight: bold;">Enter your applied job role here</span>
+            <div class="role_input_wrap">
+                <!-- <label style="font-weight: bold;" for="appliedJobRole"></label> -->
+                <input
+                class="role_input"
+                type="text"
+                id="appliedJobRole"
+                placeholder="Enter applied job role..."
+                />
+                <button class="role_input_btn" id="startInterview" type="submit">Start Interview</button>
+            </div>
+        </div>
 
-    <button id="startSpeech">Start Speaking</button>
+        <div class="d_question_showcase">
+            <h2 style="font-size: 60px;">Question Showcase</h2>
+            <div id="questionContainer">
+                <!-- <p id="question"></p> -->
+                <textarea id="response" placeholder="Your response..."></textarea>
+                <button class="btn" id="nextQuestion">Next Question</button>
+            </div>
+            <button class="btn" id="startSpeech">Start Speaking</button>
+        </div>
 
-    <script>
-        let questionId = 1; 
-        let jobRole = '';
+      <script>
+        let questionId = 1;
+        let jobRole = "";
 
         function fetchQuestion() {
-            fetch(`/get_question/${jobRole}?question_id=${questionId}`)
-                .then(response => response.json())
-                .then(data => {
-                    const questionElement = document.getElementById('question');
-                    if (data.question) {
-                        questionElement.innerText = data.question;
-                        questionId++;
-                    } else {
-                        questionElement.innerText = 'No more questions available';
-                        document.getElementById('nextQuestion').disabled = true;
-                    }
-                })
-                .catch(error => console.error('Error:', error));
+          fetch(`/get_question/${jobRole}?question_id=${questionId}`)
+            .then((response) => response.json())
+            .then((data) => {
+              const questionElement = document.getElementById("question");
+              if (data.question) {
+                questionElement.innerText = data.question;
+                questionId++;
+              } else {
+                questionElement.innerText = "No more questions available";
+                document.getElementById("nextQuestion").disabled = true;
+              }
+            })
+            .catch((error) => console.error("Error:", error));
         }
 
-        document.getElementById('nextQuestion').addEventListener('click', function() {
-            const response = document.getElementById('response').value;
-            const candidateName = document.getElementById('candidateName').value.trim();
-            
+        document
+          .getElementById("nextQuestion")
+          .addEventListener("click", function () {
+            const response = document.getElementById("response").value;
+            const candidateName = document
+              .getElementById("candidateName")
+              .value.trim();
+
             const payload = {
-                candidate_name: candidateName,
-                question_id: questionId - 1,
-                response: response
+              candidate_name: candidateName,
+              question_id: questionId - 1,
+              response: response,
             };
 
-            fetch('/submit_response', {
-                method: 'POST',
-                headers: {
-                    'Content-Type': 'application/json'
-                },
-                body: JSON.stringify(payload)
+            fetch("/submit_response", {
+              method: "POST",
+              headers: {
+                "Content-Type": "application/json",
+              },
+              body: JSON.stringify(payload),
             })
-            .then(response => response.json())
-            .then(data => {
-                
-            })
-            .catch(error => {
-                console.error('Error:', error);
-                
-            });
-            
-            fetchQuestion();
-        });
+              .then((response) => response.json())
+              .then((data) => {})
+              .catch((error) => {
+                console.error("Error:", error);
+              });
 
-        document.getElementById('startInterview').addEventListener('click', function() {
-            questionId = 1; 
-            const candidateName = document.getElementById('candidateName').value.trim();
-            jobRole = document.getElementById('appliedJobRole').value.trim();
             fetchQuestion();
-        });
+          });
 
-        const SpeechRecognition = window.SpeechRecognition || window.webkitSpeechRecognition;
+        document
+          .getElementById("startInterview")
+          .addEventListener("click", function () {
+            questionId = 1;
+            const candidateName = document
+              .getElementById("candidateName")
+              .value.trim();
+            jobRole = document.getElementById("appliedJobRole").value.trim();
+            fetchQuestion();
+          });
+
+        const SpeechRecognition =
+          window.SpeechRecognition || window.webkitSpeechRecognition;
         const recognition = new SpeechRecognition();
-        recognition.lang = 'en-US';
+        recognition.lang = "en-US";
 
         let isListening = false;
 
-        document.getElementById('startSpeech').addEventListener('click', function() {
+        document
+          .getElementById("startSpeech")
+          .addEventListener("click", function () {
             if (!isListening) {
-                recognition.start();
-                isListening = true;
-                document.getElementById('startSpeech').innerText = 'Stop Speaking';
+              recognition.start();
+              isListening = true;
+              document.getElementById("startSpeech").innerText =
+                "Stop Speaking";
             } else {
-                recognition.stop();
-                isListening = false;
-                document.getElementById('startSpeech').innerText = 'Start Speaking';
+              recognition.stop();
+              isListening = false;
+              document.getElementById("startSpeech").innerText =
+                "Start Speaking";
+            }
+          });
+
+        recognition.onresult = function (event) {
+          const transcript = event.results[0][0].transcript;
+          const responseTextarea = document.getElementById("response");
+          responseTextarea.value += transcript;
+        };
+
+        recognition.onerror = function (event) {
+          console.error("Speech recognition error:", event.error);
+          isListening = false;
+          document.getElementById("startSpeech").innerText = "Start Speaking";
+        };
+
+        recognition.onend = function () {
+          isListening = false;
+          document.getElementById("startSpeech").innerText = "Start Speaking";
+        };
+
+        document.addEventListener("DOMContentLoaded", function () {
+        var nav = document.querySelector(".nav");
+
+        window.addEventListener("scroll", function () {
+            if (window.scrollY > 0) {
+                nav.classList.add("scrolled");
+            } else {
+                nav.classList.remove("scrolled");
             }
         });
+    });
 
-        recognition.onresult = function(event) {
-            const transcript = event.results[0][0].transcript;
-            const responseTextarea = document.getElementById('response');
-            responseTextarea.value += transcript;
-        };
-        
-        recognition.onerror = function(event) {
-            console.error('Speech recognition error:', event.error);
-            isListening = false;
-            document.getElementById('startSpeech').innerText = 'Start Speaking';
-        };
+    document.getElementById("startInterview").addEventListener("click", function () {
+    const appliedRole = document.getElementById("appliedJobRole").value.trim();
+    window.location.href = `/interview/${appliedRole}`;
+  });
 
-        recognition.onend = function() {
-            isListening = false;
-            document.getElementById('startSpeech').innerText = 'Start Speaking';
-        };
-    </script>
-</body>
+      </script>
+    </div>
+  </body>
 </html>
