--- a/app/static/css/index.css
+++ b/app/static/css/index.css
@@ -92,6 +92,15 @@
     background-color: #2bbe60;
 }
 
+.nav_img{
+    width: 40px;
+    height: 40px;
+    cursor: pointer;
+    margin-bottom: -3px;
+    border-radius: 50%;
+    object-fit: cover;
+}
+
 .d_ul{
     width: 1000px;
     font-size: 30px;
