--- a/app/static/css/interview.css
+++ b/app/static/css/interview.css
@@ -2,6 +2,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: 'poppins', sans-serif;
 }
 
 .interview{
@@ -9,7 +10,6 @@
 }
 
 html{
-    font-family: 'poppins', sans-serif;
     /* color: #2bbe60; */
     background-color: rgb(238, 238, 238);
 }
@@ -127,6 +127,15 @@ html{
     cursor: pointer;
     color: white;
     background-color: #2bbe60;
+}
+
+.nav_img{
+    width: 40px;
+    height: 40px;
+    cursor: pointer;
+    margin-bottom: -3px;
+    border-radius: 50%;
+    object-fit: cover;
 }
 
 .questions-container{
