updated directory with run.py

--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -26,6 +26,7 @@
             />
           </div>
           <button type="submit" class="l_btn">Log In</button>
+          <a style="margin-left: -155px;" href="/forgot_password">Forgot Password?</a>
           <span>or</span>
         </form>
         <a href="/google_login" class="l_google_btn">
