--- a/app/templates/update_password.html
+++ b/app/templates/update_password.html
@@ -4,15 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="../static/css/email.css">
+    <link rel="stylesheet" href="../static/css/update_password.css">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500&family=Poppins:wght@300&display=swap" rel="stylesheet">
 </head>
 <body>
-    <div class="email">
-        <h1>Enter your email to get OTP</h1>
-        <form class="e_form" action="/getotp" method="POST">
-            <input class="e_input" type="email" name="email" placeholder="Email" id="">
-            <button class="e_btn" type="submit">Get OTP</button>
+    <div class="update">
+        <h1>Update Password</h1>
+        <form class="u_form" action="/update_password" method="POST">
+            <input class="u_input" type="password" name="password" placeholder="Enter Password" id="">
+            <input class="u_input" type="password" name="re-password" placeholder="Re-Enter Password" id="">
+            <button class="u_btn" type="submit">Update</button>
         </form>
         {% if error_message %}
             <p class="error-message">{{ error_message }}</p>
