--- a/app/static/css/update_password.css
+++ b/app/static/css/update_password.css
@@ -4,7 +4,7 @@
     font-family: 'Poppins', sans-serif;
 }
 
-.email{
+.update{
     height: 100vh;
     width: 100vw;
     background-color: rgb(219, 219, 219);
@@ -15,7 +15,17 @@
     gap: 30px;
 }
 
-.e_input{
+.u_form{
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+}
+
+.u_btn{
+    background-color: #2bbe60;
+}
+
+.u_input{
     font-size: 22px;
     padding: 8px;
     border: none;
@@ -23,7 +33,7 @@
     border-radius: 5px;
 }
 
-.e_btn{
+.u_btn{
     padding: 8px;
     font-size: 20px;
     border-radius: 10px;
