[Features] RBAC, schema update and send emails to selected candidates

--- a/app/templates/register.html
+++ b/app/templates/register.html
@@ -13,21 +13,39 @@
 
         <form action="{{ url_for('routes.register') }}" method="post">
             <div>
-                <label for="username">Username:</label>
-                <input type="text" name="username" required>
+                <label for="email">Email:</label>
+                <input type="email" name="email" required>
             </div>
             <div>
                 <label for="password">Password:</label>
                 <input type="password" name="password" required>
             </div>
             <div>
-                <label for="name">Your Name:</label> <!-- Add this line -->
-                <input type="text" name="name" required> <!-- Add this line -->
+                <label for="name">Your Name:</label>
+                <input type="text" name="name" required>
             </div>
             <div>
-                <label for="applied_job_role">Applied Job Role:</label> <!-- Add this line -->
-                <input type="text" name="applied_job_role" required> <!-- Add this line -->
+                <label for="role">Select Role:</label>
+                <select name="role" id="role" onchange="toggleJobRoleField()">
+                    <option value="candidate">Candidate</option>
+                    <option value="hr">HR</option>
+                </select>
             </div>
+            <div id="appliedJobRoleField">
+                <label for="applied_job_role">Applied Job Role:</label>
+                <input type="text" name="applied_job_role" required>
+            </div>
+            <script>
+                // Set the initial state of the appliedJobRoleField
+                document.getElementById('appliedJobRoleField').style.display = 'block';
+
+                function toggleJobRoleField() {
+                    var roleDropdown = document.getElementById('role');
+                    var appliedJobRoleField = document.getElementById('appliedJobRoleField');
+
+                    appliedJobRoleField.style.display = roleDropdown.value === 'hr' ? 'none' : 'block';
+                }
+            </script>
             <div>
                 <input type="submit" value="Register">
             </div>
