--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -10,8 +10,8 @@
         <h1>Login</h1>
         <form action="{{ url_for('routes.login') }}" method="post">
             <div>
-                <label for="username">Username:</label>
-                <input type="text" name="username" required>
+                <label for="email">Email:</label> <!-- Change this line -->
+                <input type="email" name="email" required> <!-- Change this line -->
             </div>
             <div>
                 <label for="password">Password:</label>
