added figma design and styles

--- a/app/static/css/index.css
+++ b/app/static/css/index.css
@@ -60,7 +60,7 @@ html{
     border: none;
     cursor: pointer;
     color: white;
-    background-color: #2bbe60;
+    background-color: #323782;
 }
 
 .nav{
@@ -89,7 +89,7 @@ html{
     border: none;
     cursor: pointer;
     color: white;
-    background-color: #2bbe60;
+    background-color: #323782;
 }
 
 .nav_img{
