--- a/app/static/css/hr.css
+++ b/app/static/css/hr.css
@@ -8,18 +8,16 @@
 html{
     min-height: 100vh;
     background-color: rgb(238, 238, 238);
-    /* background-color: red; */
     position: relative;
 }
 
 .hr{
     display: flex;
-    /* height: 100vh; */
-    /* width: 100vw; */
     margin-top: 60px;
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    width: 100vw;
 }
 
 
@@ -38,6 +36,10 @@ html{
     align-items: center;
     justify-content: center;
     gap: 15px;
+    width: 50%;
+    background-color: white;
+    padding: 40px;
+    border-radius: 5px;
 }
 
 .s_password{
@@ -49,20 +51,29 @@ html{
 }
 
 .s_email{
-    width: 300px;
     display: flex;
-    flex-direction: column;
-    gap: 0;
+    align-items: center;
+    font-size: 20px;
+    width: 90%;
 }
 
 .s_input{
-    padding: 5px;
+    height: 20px;
+    width: 100%;
+    padding: 15px;
     border: none;
     outline: none;
     border-radius: 5px;
-    border: 2px solid black;
-    outline: none;
-    width: 290px;
+    border: 2px solid #D9D7D7;
+    flex: 1;
+}
+
+.s_input_container{
+    flex: 1;
+}
+
+.s_label{
+    flex: 1;
 }
 
 
@@ -74,11 +85,7 @@ html{
     cursor: pointer;
     color: white;
     width: 100%;
-    background-color: #2bbe60;
-}
-
-.s_btn:hover{
-
+    background-color: #323782;
 }
 
 .s_google_btn{
@@ -95,7 +102,7 @@ html{
 }
 
 .s_google_btn:hover{
-    background-color: #2bbe60;
+    background-color: #323782;
     color: white;
     border: none;
 }
@@ -172,7 +179,7 @@ html{
     border: none;
     cursor: pointer;
     color: white;
-    background-color: #2bbe60;
+    background-color: #323782;
 }
 
 .nav_img{
