--- a/app/static/css/login.css
+++ b/app/static/css/login.css
@@ -17,9 +17,12 @@
     justify-content: center;
     flex-direction: column;
     gap: 20px;
+    /* background-color: yellow; */
 }
 
 .l_form{
+    /* background-color: red; */
+    width: 90%;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -28,38 +31,41 @@
 }
 
 .l_password{
-    width: 300px;
     display: flex;
     flex-direction: column;
-    font-size: 22px;
+    font-size: 18px;
     gap: 5px;
+    width: 90%;
 }
 
 .l_email{
-    width: 300px;
     display: flex;
     flex-direction: column;
-    font-size: 22px;
+    font-size: 18px;
     gap: 5px;
+    width: 90%;
 }
 
 .l_input{
+    width: 100%;
     padding: 10px;
     border: none;
     outline: none;
     border-radius: 5px;
-    border: 2px solid black;
+    border: 2px solid #D9D7D7;
 }
 
 .l_btn{
     padding: 8px;
-    font-size: 20px;
-    border-radius: 10px;
+    font-size: 18px;
+    border-radius: 5px;
     border: none;
     cursor: pointer;
     color: white;
-    width: 100%;
-    background-color: #2bbe60;
+    width: 540px;
+    background-color: #323782;
+    margin-left: 22px;
+    color: #FFFFFF;
 }
 
 .l_btn:hover{
@@ -86,11 +92,8 @@
 }
 
 .l_right{
-    background: url('https://www.clker.com/cliparts/5/4/8/a/12401655391311375203boobaloo_Chemistry_Conical_Funnel.svg.hi.png');
-    background-color: rgba(128, 128, 128, 0.5);
     flex: 1;
-    border-top-left-radius: 20px;
-    border-bottom-left-radius: 20px;
+    /* background-color: red; */
 }
 
 .l_right_title{
@@ -101,12 +104,14 @@
 }
 
 .l_right_hr{
+    background-color: rgba(128, 128, 128, 0.5);
     display: flex;
     flex-direction: column;
     /* align-items: center; */
     justify-content: center;
-    margin-top: 100px;
-    width: 400px;
+    margin-top: 20px;
+    width: 90%;
+    height: 90%;
     margin-left: auto;
     margin-right: auto;
 }
@@ -127,4 +132,33 @@
     border: none;
     cursor: pointer;
     color: white;
+}
+
+.l_down{
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+}
+
+.l_down_options{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-top: 20px;
+    width: 100%;
+    gap: 30px;
+    color: #323782;
+}
+
+.l_down_option{
+    /* background-color: #DEE0FF; */
+    padding: 25px;
+
+}
+
+.form-label{
+    color:#2C2C2C;
+    font-weight: bold;
 }
