--- a/app/templates/hr.html
+++ b/app/templates/hr.html
@@ -5,6 +5,7 @@
   <title>HR Input Form</title>
   <link rel="stylesheet" href="../static/css/hr.css">
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500&family=Poppins:wght@300&display=swap" rel="stylesheet">
+  
 </head>
 <body>
   <div class="nav">
@@ -23,12 +24,12 @@
   </div>
   <div class="hr">
     
-    <h1 style="margin-bottom: 20px;">HR Input Form</h1>
+    <h1 class="hr_title">HR Input Form</h1>
     <form class="s_form" id="hrInputForm">
       
       <div class="s_email">
         <div class="s_label">
-          <label style="font-size: 20px;" for="jobRole">Job Role:</label><br>
+          <label for="jobRole">Job Role:</label><br>
         </div>
         <div class="s_input_container">
           <input class="s_input" type="text" id="jobRole" name="jobRole"><br>
@@ -37,16 +38,16 @@
         
       <div class="s_email">
         <div class="s_label">
-          <label class="s_label" style="font-size: 20px;" for="jobDescription">Job Description:</label><br>
+          <label class="s_label" for="jobDescription">Job Description:</label><br>
         </div>
         <div class="s_input_container">
-          <textarea class="s_input" id="jobDescription" name="jobDescription"></textarea><br>
+          <textarea class="s_textarea" id="jobDescription" name="jobDescription"></textarea><br>
         </div>
     </div>
     
     <div class="s_email">
       <div class="s_label">
-        <label class="s_label" style="font-size: 20px;" for="keySkills">Key Skills:</label><br>
+        <label class="s_label" for="keySkills">Key Skills:</label><br>
       </div>
       <div class="s_input_container">
         <input class="s_input" type="text" id="keySkills" name="keySkills"><br>
@@ -55,7 +56,7 @@
   
   <div class="s_email">
     <div class="s_label">
-      <label class="s_label" style="font-size: 20px;" for="requiredExperience">Required Experience:</label><br>
+      <label class="s_label" for="requiredExperience">Required Experience:</label><br>
     </div>
     <div class="s_input_container">
       <input class="s_input" type="text" id="requiredExperience" name="requiredExperience"><br><br>
