--- a/app/templates/results.html
+++ b/app/templates/results.html
@@ -33,7 +33,7 @@
             <input type="submit" value="Send Emails">
         </form>
     {% else %}
-        <p style="color: red;">An error occurred: {{ Status }}</p>
+        <p style="color: red;">An error occurred: {{ error_message }}</p>
     {% endif %}
 
 </body>
