--- a/app/static/css/signup.css
+++ b/app/static/css/signup.css
@@ -20,6 +20,50 @@
     padding-bottom: 10px;
 }
 
+.s_select{
+    width: 540px;
+    height: 100px;
+}
+
+
+
+.s_left_title{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+}
+
+.s_left_title_heading{
+    font-size: 50px;
+    color: #2C2C2C;
+}
+
+.s_left_title_desc{
+    color:#4C4C4C
+}
+
+.s_reminder{
+    display: flex;width: 90%;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.s_reminder_left{
+    display: flex;
+    align-items: center;
+    gap: 5px;
+}
+
+.s_email_label{
+    font-weight: bold;
+}
+
+.s_reminder_right{
+    text-decoration: none;
+}
+
+
 .s_form{
     width: 90%;
     display: flex;
@@ -134,4 +178,10 @@
 .form-label{
     color:#2C2C2C;
     font-weight: bold;
+}
+
+.s_down_login{
+    text-decoration: none;
+    font-weight: bold;
+    color: #323782;
 }
