--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -12,14 +12,12 @@
 </head>
 
 <body>
-
-    {% if current_user.is_authenticated %}
-    <div class="nav">
-      <h1 style="font-size: 40px;"><a style="text-decoration: none;color: inherit;" href="/">Funnel<span style="color: #323782;font-weight: bold;">HQ</span></a></h1>
-    <div style="display: flex; align-items: center; gap: 20px;">
+  <div class="nav">
+    <h1 class="nav_title"><a class="nav_title_prefix" href="/">Funnel<span class="title_text">HQ</span></a></h1>
+    <div class="nav_right">
       <a href="{{ url_for('routes.logout') }}"><button class="btn">Logout</button></a>
       <a href="/profile/{{ current_user.id }}">
-        {% if current_user.profile_picture_filename and current_user.profile_picture_filename|length > 10 %}
+        {% if current_user.profile_picture_filename and user.profile_picture_filename|length > 10 %}
             <img class="nav_img" src="../static/{{ current_user.profile_picture_filename }}" alt="">
         {% else %}
             <img class="nav_img" src="https://www.iconpacks.net/icons/2/free-user-icon-3296-thumb.png" alt="">
@@ -27,82 +25,76 @@
       
       </a>
     </div>
-    </div>
-    <!-- <p>Welcome, {{ current_user.username }}!</p> -->
+  </div>
+
+  <div class="home">
+
+    {% if current_user.is_authenticated %}
+    <!-- <p >Welcome, {{ current_user.name }}!</p> -->
+
     <div class="d_title">
-      <h1>Candidate <span style="color: #323782;">Interview</span></h1>
+      <h1>Candidate <span class="interview_text">Interview</span></h1>
     </div>
-
-
+    
     <div class="user_info">
-        {% if current_user %}
-          <p style="font-size: 30px;"><span style="font-weight: bold;">Your Name:</span> {{ current_user.name }}</p>
-          <p style="font-size: 30px;"><span style="font-weight: bold;">Applied Job Role:</span> {{ current_user.applied_job_role }}</p>
-        {% endif %}
+      <label class="user_info_input" for="candidateName">Your Name: <span id="candidateName">{{ current_user.name }}</span></label>
+      <p class="user_info_input">Applied Job Role: <span id="appliedJobRole">{{ current_user.applied_job_role }}</span></p>
+    </div>
+    
+    <button class="role_input_btn" id="startInterview">Start Interview</button>
+    
+    <div class="q_down">
+
+      <h2 class="showcase_title">Question Showcase</h2>
+      <div class="q_container" id="questionContainer">
+        <p class="q_text" id="question"></p>
+        <textarea class="response_textarea" id="response" placeholder="Your response..."></textarea>
+        <button class="role_input_btn" id="nextQuestion">Next Question</button>
+      </div>
     </div>
 
-
-        <div class="role">
-            <span style="font-weight: bold;">Enter your applied job role here</span>
-            <div class="role_input_wrap">
-                <input
-                class="role_input"
-                type="text"
-                id="appliedJobRole"
-                placeholder="Enter applied job role..."
-                />
-                <button class="role_input_btn" id="startInterview" type="submit">Start Interview</button>
-            </div>
-        </div>
-
-        <div class="d_question_showcase">
-            <h2 style="font-size: 60px;">Question Showcase</h2>
-            <div id="questionContainer">
-                <textarea id="response" placeholder="Your response..."></textarea>
-                <button class="btn" id="nextQuestion">Next Question</button>
-            </div>
-            <button class="btn" id="startSpeech">Start Speaking</button>
-        </div>
+    <button class="role_input_btn" id="startSpeech">Start Speaking</button>
 
     {% else %}
     <p>Please <a href="{{ url_for('routes.login') }}">log in</a> to access this page.</p>
     {% endif %}
-
+  </div>
+    
     <script>
-        let questionId = 1;
+      let questionId = 1;
         let jobRole = '';
     
         function fetchQuestion() {
           fetch(`/get_question/${jobRole}?question_id=${questionId}`)
-            .then((response) => response.json())
-            .then((data) => {
-              const questionElement = document.getElementById("question");
-              if (data.question) {
-                questionElement.innerText = data.question;
-                questionId++;
-              } else {
-                questionElement.innerText = "No more questions available";
-                document.getElementById("nextQuestion").disabled = true;
+                .then(response => response.json())
+                .then(data => {
+                  const questionElement = document.getElementById('question');
+                  if (data.question) {
+                        questionElement.innerText = data.question;
+                        questionId++;
+                    } else {
+                        questionElement.innerText = 'No more questions available';
+                        document.getElementById('nextQuestion').disabled = true;
+                      }
+                    })
+                .catch(error => console.error('Error:', error));
               }
-            })
-            .catch((error) => console.error("Error:", error));
-        }
     
         document.getElementById('nextQuestion').addEventListener('click', function () {
-            const response = document.getElementById('response').value;
-            const candidateName = document.getElementById('candidateName').innerText;
+          const response = document.getElementById('response').value;
+          const candidateName = document.getElementById('candidateName').innerText;
     
             const payload = {
-              candidate_name: candidateName,
-              question_id: questionId - 1,
-              response: response,
+                candidate_name: candidateName,
+                question_id: questionId - 1,
+                response: response
             };
-    
+            
             fetch('/submit_response', {
                 method: 'POST',
                 headers: {
                     'Content-Type': 'application/json'
-                },
+                  },
                 body: JSON.stringify(payload)
             })
                 .then(response => response.json())
@@ -110,18 +102,18 @@
     
                 })
                 .catch(error => {
-                    console.error('Error:', error);
+                  console.error('Error:', error);
                 });
     
             fetchQuestion();
-        });
+          });
     
         document.getElementById('startInterview').addEventListener('click', function () {
-            questionId = 1;
-            const candidateName = document.getElementById('candidateName').innerText;
-            jobRole = document.getElementById('appliedJobRole').innerText;
-            console.log(candidateName);
-            console.log(jobRole);
+          questionId = 1;
+          const candidateName = document.getElementById('candidateName').innerText;
+          jobRole = document.getElementById('appliedJobRole').innerText;
+          console.log(candidateName);
+          console.log(jobRole);
             fetchQuestion();
         });
     
@@ -133,43 +125,13 @@
     
         document.getElementById('startSpeech').addEventListener('click', function () {
             if (!isListening) {
-              recognition.start();
-              isListening = true;
-              document.getElementById("startSpeech").innerText =
-                "Stop Speaking";
+                recognition.start();
+                isListening = true;
+                document.getElementById('startSpeech').innerText = 'Stop Speaking';
             } else {
               recognition.stop();
               isListening = false;
-              document.getElementById("startSpeech").innerText =
-                "Start Speaking";
-            }
-          });
-
-        recognition.onresult = function (event) {
-          const transcript = event.results[0][0].transcript;
-          const responseTextarea = document.getElementById("response");
-          responseTextarea.value += transcript;
-        };
-
-        recognition.onerror = function (event) {
-          console.error("Speech recognition error:", event.error);
-          isListening = false;
-          document.getElementById("startSpeech").innerText = "Start Speaking";
-        };
-
-        recognition.onend = function () {
-          isListening = false;
-          document.getElementById("startSpeech").innerText = "Start Speaking";
-        };
-
-        document.addEventListener("DOMContentLoaded", function () {
-        var nav = document.querySelector(".nav");
-
-        window.addEventListener("scroll", function () {
-            if (window.scrollY > 0) {
-                nav.classList.add("scrolled");
-            } else {
-                nav.classList.remove("scrolled");
+                document.getElementById('startSpeech').innerText = 'Start Speaking';
             }
         });
     
@@ -177,20 +139,19 @@
             const transcript = event.results[0][0].transcript;
             const responseTextarea = document.getElementById('response');
             responseTextarea.value += transcript;
-        };
-    
-        recognition.onerror = function (event) {
+          };
+          
+          recognition.onerror = function (event) {
             console.error('Speech recognition error:', event.error);
             isListening = false;
             document.getElementById('startSpeech').innerText = 'Start Speaking';
-        };
-    
-        recognition.onend = function () {
+          };
+          
+          recognition.onend = function () {
             isListening = false;
             document.getElementById('startSpeech').innerText = 'Start Speaking';
-        };
-      })
-    </script>
+          };
+          </script>
     </body>
 
-</html>
+    </html>
