changed frontned code to react

--- a/app/templates/register.html
+++ b/app/templates/register.html
@@ -62,9 +62,7 @@
         </form>
         <div>
           <span>Already have an account?  </span
-            ><a class="s_down_login" href="{{ url_for('routes.login') }}"
-            >LogIn</a
-            >
+            ><a class="s_down_login" href="{{ url_for('routes.login') }}">LogIn</a>
           </div>
       </div>
     </div>
